--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
 
 <body>
   <div class="container">
-    <form class="search-form" id="search-form">
-      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-      <button type="submit">Search</button>
 
+    <form class="search-form" id="search-form">
+      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." class="input" />
+      <button type="submit" class="btnSubmit">Search</button>
     </form>
 
     <div class="gallery">
@@ -22,6 +22,7 @@
     </div>
 
     <button type="button" class="load-more is-hidden">Load more</button>
+    <div class="all-content"></div>
   </div>
 </body>
 
