--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Page title</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="./sass/index.scss" />
   <script type="module" src="./index.js"></script>
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-gellery">
 
     <form class="search-form" id="search-form">
       <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." class="input" />
@@ -21,7 +23,12 @@
       <!-- Карточки изображений -->
     </div>
 
-    <button type="button" class="load-more is-hidden">Load more</button>
+    <!-- <button type="button" class="load-more is-hidden">Load more</button> -->
+    <button class="btn btn-primary load-more style-btn" type="button" disabled data-action="load-more">
+      <span class="spinner-border spinner-border-sm spinner is-hidden" role="status" aria-hidden="true"></span>
+      <span class="sr-only">Loading...</span>
+      <span class="label">Load more</span>
+    </button>
     <div class="all-content"></div>
   </div>
 </body>
