--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,7 @@
 
     <form class="search-form" id="search-form">
       <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." class="input" />
-      <!-- <button type="submit" class="btnSubmit">Search</button> -->
-      <button class="btn btn-primary load-more btnSubmit" type="submit" data-action-search="Search">
+      <button class="btn btn-primary load-more btnSearch" type="submit" data-action-search="Search">
         <span class="spinner-border spinner-border-sm spinner is-hidden" role="status" aria-hidden="true"></span>
         <span class="sr-only">Loading...</span>
         <span class="label">Search</span>
@@ -27,7 +26,6 @@
     <div class="gallery">
       <!-- Карточки изображений -->
     </div>
-
 
     <button class="btn btn-primary load-more style-btn" type="button" disabled data-action="load-more">
       <span class="spinner-border spinner-border-sm spinner is-hidden" role="status" aria-hidden="true"></span>
